--- a/Expense Tracker/Expense Tracker/Views/SummaryPage.xaml
+++ b/Expense Tracker/Expense Tracker/Views/SummaryPage.xaml
@@ -19,7 +19,7 @@
         </ToolbarItem>
     </ContentPage.ToolbarItems>
 
-    <RefreshView x:DataType="local:ExpensesViewModel" Command="{Binding LoadItemsCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
+    <RefreshView x:DataType="local:SummaryViewModel" Command="{Binding LoadItemsCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
@@ -64,8 +64,9 @@
                        HorizontalOptions="Center"
                        Padding="10"
                        FontFamily="FAR"/>
+                
             </StackLayout>
-            
+
             <Label Text="Expenses by category"
                    TextColor="#574C4E"
                    LineBreakMode="NoWrap"
@@ -73,7 +74,7 @@
                    Grid.Row="3"
                    Grid.Column="0"
                    Grid.ColumnSpan="8"     
-                   Padding="10"
+                   Margin="10"
                    FontSize="18"
                    FontFamily="FAR"/>
 
